--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "10.13.0"
   },
   "scripts": {
-    "postinstall": "cross-env NODE_ENV=prod npm test",
+    "prod:test": "cross-env NODE_ENV=prod npm test",
     "prod": "cross-env NODE_ENV=prod node api.js",
     "start": "cross-env NODE_ENV=dev node api.js",
     "test": "nyc --reporter=html mocha --timeout 10000 tests/*.test.js --exit"
